bk_ida/gccida/g1/copy_loop_body
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2246:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types unroll_type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2253:4: error: expected ';' after expression
rtx last_insn; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2253:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2257:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2257:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2258:4: error: expected ';' after expression
rtx v19; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2258:5: error: use of undeclared identifier 'v19'
rtx v19; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2262:6: error: use of undeclared identifier 'v23'
rtx *v23; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2272:1: error: use of undeclared identifier 'induction_1'
induction_1 *v33; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2272:14: error: use of undeclared identifier 'v33'
induction_1 *v33; // rax 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2274:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2274:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2275:1: error: use of undeclared identifier 'induction_1'
induction_1 *v36; // r13 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2275:14: error: use of undeclared identifier 'v36'
induction_1 *v36; // r13 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2277:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2277:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2279:4: error: expected ';' after expression
rtx new_reg; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2279:5: error: use of undeclared identifier 'new_reg'
rtx new_reg; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/unroll.c:2282:4: error: expected ';' after expression
rtx mult_val; // rcx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_loop_body/src/obj/unroll.o] Error 1
